# pacman-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pacman.txt  pacman_mapa1.txt  pacman_mapa2.txt
controller/: controller.cpp  controller.h
main/: main.cpp  window.cpp  window.h  windowExercicios.cpp  windowExercicios.h
model/: arquivo.cpp  arquivo.h  mapa.cpp  mapa.h  matriz.h  model.cpp  model.h  objeto.h  personagem.cpp  personagem.h  personagemPacman.cpp  personagemPacman.h
view/: view.cpp  view.h
